[package]
name = "learnopengl"
version = "0.1.0"
edition = "2021"

[lib]
name = "learnopengl"
path = "src/lib.rs"

[dependencies]
env_logger = "0.9.0"
gl = "0.14.0"
hecs = "0.7.5"
image = "0.24.0"
include_dir = "0.7.2"
log = "0.4.14"
nalgebra = "0.30.1"
num-traits = "0.2.14"
regex = "1.5.4"
russimp = "1.0.1"
sdl2 = "0.35.1"
